Renamed "show component forces" to "show horizontal forces"
Fixed: Stop animating the wiggle me help text after 2 oscillations
Fixed: Remove the selection for different objects when more controls is selected (Should no longer be necessary since the objects will still be shown above the controls)

New in 1.17.15
Fixed: When you first click Graph Force, the slider is very small. It expands when you mouse over it.
Fixed: If you set a force and hit go, when you rewind and playback, the force slider tracks the friction force rather than the applied force.

New in 1.17.14
Fixed: Applied force text box does not update until mouseover. Reproducable by dragging the crate, then let go - applied force does not reset to zero until mouseover.

New in 1.17.13
Removed performance problems with Applied Force text box update and Go Pause Clear button update

New in 1.17.12
Fixed: When you hit the Clear button, the "Apply a Force By dragging the slider" wiggle me pops up.  This shouldn't pop up if there is no slider.
Fixed: the wiggle me is in the wrong position for the slider when it is present (too high).
Fixed: make the checkboxes in the control panel (Show forces, etc.) aligned on the left
Fixed: The Applied Force text box does not update until you mouse over it. This is when entering values,
using the slider, or dragging the object.
Fixed: The Go, Pause, and Clear buttons also seem to stay grayed out until you mouse over them.

New in 1.17.11
Bugfix in strings

New in 1.17.10
Converted FBD to piccolo
Added button to enable FBD
FBD is disabled by default
Fixed: cursor hand should be enabled everywhere on FBD
Fixed: mouse events pass through the "close fbd" buttons and create force
Fixed: the graph label "Force (N)" overlaps the slider.
Fixed: the slider control is only the width of the slider. Makes it almost impossible to see or grab.
When the sim starts, all graphs are minimized and the play area is lower, to be centered in the window of the sim