@@ -78,6 +78,8 @@ ObjectSelectionPanel.chooseObject = Choose Object
 
 SimpleControlPanel.moreControls = More Controls >>
 SimpleControlPanel.friction = Friction
+SimpleControlPanel.friction-on = On
+SimpleControlPanel.friction-off = Off
 SimpleControlPanel.show.component.forces= Show horizontal forces
 SimpleControlPanel.show.total.force= Show total force
 
